quarkus/getting-started/target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2020-11-25 - 16:57:45 +0000
    app.openshift.io/vcs-url: https://github.com/Samuel-Antequera/risk-seekers-hackaton.git
    app.quarkus.io/commit-id: 41ac87355802fb14c34713b0b8bf096f081e48fd
    app.quarkus.io/vcs-url: https://github.com/Samuel-Antequera/risk-seekers-hackaton.git
  labels:
    app.kubernetes.io/name: getting-started
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: getting-started
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: getting-started
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2020-11-25 - 16:57:45 +0000
    app.openshift.io/vcs-url: https://github.com/Samuel-Antequera/risk-seekers-hackaton.git
    app.quarkus.io/commit-id: 41ac87355802fb14c34713b0b8bf096f081e48fd
    app.quarkus.io/vcs-url: https://github.com/Samuel-Antequera/risk-seekers-hackaton.git
  labels:
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.kubernetes.io/name: getting-started
    app.openshift.io/runtime: quarkus
  name: getting-started
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: getting-started
    app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2020-11-25 - 16:57:45 +0000
        app.openshift.io/vcs-url: https://github.com/Samuel-Antequera/risk-seekers-hackaton.git
        app.quarkus.io/commit-id: 41ac87355802fb14c34713b0b8bf096f081e48fd
        app.quarkus.io/vcs-url: https://github.com/Samuel-Antequera/risk-seekers-hackaton.git
      labels:
        app.kubernetes.io/version: 1.0-SNAPSHOT
        app.kubernetes.io/name: getting-started
        app.openshift.io/runtime: quarkus
    spec:
      containers:
      - args:
        - -jar
        - /deployments/target/getting-started-1.0-SNAPSHOT-runner.jar
        - -cp
        - /deployments/target/lib/jakarta.annotation.jakarta.annotation-api-1.3.5.jar:/deployments/target/lib/jakarta.el.jakarta.el-api-3.0.3.jar:/deployments/target/lib/jakarta.ejb.jakarta.ejb-api-3.2.6.jar:/deployments/target/lib/jakarta.interceptor.jakarta.interceptor-api-1.2.5.jar:/deployments/target/lib/jakarta.enterprise.jakarta.enterprise.cdi-api-2.0.2.jar:/deployments/target/lib/jakarta.inject.jakarta.inject-api-1.0.jar:/deployments/target/lib/io.smallrye.common.smallrye-common-annotatio [...]
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        command:
        - java
        image: samuel/getting-started:1.0-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: getting-started
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - getting-started
      from:
        kind: ImageStreamTag
        name: getting-started:1.0-SNAPSHOT
    type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2020-11-25 - 16:57:45 +0000
    app.openshift.io/vcs-url: https://github.com/Samuel-Antequera/risk-seekers-hackaton.git
    app.quarkus.io/commit-id: 41ac87355802fb14c34713b0b8bf096f081e48fd
    app.quarkus.io/vcs-url: https://github.com/Samuel-Antequera/risk-seekers-hackaton.git
  labels:
    app.kubernetes.io/name: getting-started
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: getting-started
spec:
  host: ""
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: getting-started
